--- a/application/views/scripts/retablir/index.phtml
+++ b/application/views/scripts/retablir/index.phtml
@@ -1,17 +1,28 @@
 <?php if (!$this->is_allowed_delete_dossier && !$this->is_allowed_delete_etablissement): ?>
     <?= $this->partial('error/not-allowed.phtml') ?>
 <?php else: ?>
-    <h2>Rétablir</h2>
+    <h2>Gestion des éléments supprimés</h2>
 
-    <?php if ($this->is_allowed_delete_dossier): ?>
-        <?= $this->partial('retablir/partials/partial-deleted-dossiers.phtml', [
-            'data' => $this->dossiersSupprimes
-        ]) ?>
-    <?php endif ?>
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#dossiers" data-toggle="tab">Dossiers</a></li>
+        <li><a href="#etablissements" data-toggle="tab">Etablissements</a></li>
+    </ul>
 
-    <?php if ($this->is_allowed_delete_etablissement): ?>
-        <?= $this->partial('retablir/partials/partial-deleted-etablissements.phtml', [
-            'data' => $this->etablissementsSupprimes
-        ]) ?>
-    <?php endif ?>
+    <div class="tab-content">
+        <?php if ($this->is_allowed_delete_dossier): ?>
+            <div id="dossiers" class="tab-pane active">
+                <?= $this->partial('retablir/partials/partial-deleted-dossiers.phtml', [
+                    'data' => $this->dossiersSupprimes
+                ]) ?>
+            </div>
+        <?php endif ?>
+
+        <?php if ($this->is_allowed_delete_etablissement): ?>
+            <div id="etablissements" class="tab-pane">
+                <?= $this->partial('retablir/partials/partial-deleted-etablissements.phtml', [
+                    'data' => $this->etablissementsSupprimes
+                ]) ?>
+            </div>
+        <?php endif ?>
+    </div>
 <?php endif ?>
