Ajout de l'adresse en plus du nom de l'établissement

--- a/application/views/scripts/retablir/partials/partial-deleted-etablissements.phtml
+++ b/application/views/scripts/retablir/partials/partial-deleted-etablissements.phtml
@@ -19,9 +19,10 @@
                     </td>
 
                     <td class='linkDisabled'>
-                        <?= $this->partial('search/results/etablissement.phtml', [
-                            $deletedElement
-                        ]) ?>
+                        <?= $deletedElement['LIBELLE_ETABLISSEMENTINFORMATIONS'] ?>
+                        <?php if ('' !== $deletedElement['LIBELLE_COMMUNE']): ?>
+                            - <?= $deletedElement['LIBELLE_COMMUNE'] ?>
+                        <?php endif ?>
                     </td>
 
                     <td>
