[#4714] Possibilité de rétablir un dossier/établissement (#58)
* modification vue dossier.phtml

* Refacto dossier.phtml

* refacto + controller service partie dossier

* ajout ecriture suppression retablssement

* ajout tableau admin retablissement

* suppression des doublons d etablissement supprime

* rectification redirect

* ajout sql + ajout de lid utilisateur supprimant le dossier ou etablissement

* reset valeur DELETE_BY lors d un retablissement

* ajout username de l utilisateur ayant supprime le dossier / etablissmeent

* grid affichage nom personne suppression

* joinLeft getSQL + disabled link sur etablissement

* ajout sql droit resource retablir

* ajout restriction acces retablir + correction sql

* fix php-cs-fixer

* Renommage

* Corrections sur les accès aux pages

* Titre de page explicite

* Création d'un partial pour la liste d'éléments supprimés

* Redirection vers la page précédente

* Harmonisation du style du fichier

* Redirection vers la page précédente

* Correction d'affichage des informations des dossiers

* Meilleur affichage de la liste des dossiers

* Affichage sous forme de table pour plus de clarté

* Renommage plus cohérent avec le reste

* Affichage avec des onglets pour plus de clarté

* Simplification des requêtes SQL

* Ajout de l'adresse en plus du nom de l'établissement

* Erreur lors du merge

* Harmonisation du style du fichier

* Correction sur l'information de suppression d'un dossier dans le layout

* Correction sur le typage du helper des Dates

* Utilisation de la dernière version ubuntu pour la CI

---------

Co-authored-by: Maxime Merrien <maxime.merrien@atos.net>

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -832,8 +832,6 @@ text-decoration: none;
     box-shadow: none;
 }
 
-
-
 .nav-tabs.nav-stacked.menu_dashboard>li>a {
   border-radius: 0px;
   border-top: 1px solid #fff;
@@ -875,7 +873,6 @@ text-decoration: none;
   width: 1%;
 }
 
-
 .sidebar {
   background-color: #f4f4f4;
   display: inline-block;
@@ -901,7 +898,6 @@ text-decoration: none;
 {
   background: #f9f9f9;
 }
-
 
 .list-group {
   padding-left: 0;
@@ -1260,6 +1256,13 @@ dl.champ_effectif_camping dd input {
 
 #ign-accordion select[name='FORMAT_COUCHECARTO'] {
     width: fit-content;
+}
+
+.linkDisabled {
+    pointer-events: none;
+}
+.linkDisabled li {
+    list-style: none;
 }
 
 .radio-controls {
