--- a/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
@@ -6,7 +6,7 @@
     </li>
     <li class="nav-header">Actions</li>
     <li>
-        <a id='exportCom'  href='/calendrier-des-commissions/exportoutlook/dateCommId/<?php echo $this->infosDateComm['ID_DATECOMMISSION']; ?>' ><em class='icon-calendar'></em> Exporter pour Outlook</a>
+        <a id='exportCom' href='/calendrier-des-commissions/exportoutlook/dateCommId/<?php echo $this->infosDateComm['ID_DATECOMMISSION']; ?>' ><em class='icon-calendar'></em> Exporter pour Outlook</a>
     </li>
     <li>
         <a href="#" id='createConvoc'><em class="icon-file"></em> Générer Convocations</a>
@@ -22,9 +22,9 @@
     </li>
     <li>
         <?php if($this->infosDateComm['GESTION_HEURES'] == 1): ?>
-                <a href="#" class="heures" id='non' onclick="return confirm('Confirmez vous de ne pas prendre en compte les heures ?');"><em class="icon-time"></em> Ne pas prendre en compte les heures</a>
+            <a href="#" class="heures" id='non' onclick="return confirm('Confirmez vous de ne pas prendre en compte les heures ?');"><em class="icon-time"></em> Ne pas prendre en compte les heures</a>
         <?php else : ?>
-                <a href="#" class="heures" id='oui' onclick="return confirm('Confirmez vous de prendre en compte les heures ?');"><em class="icon-time"></em> Prendre en compte les heures</a>
+            <a href="#" class="heures" id='oui' onclick="return confirm('Confirmez vous de prendre en compte les heures ?');"><em class="icon-time"></em> Prendre en compte les heures</a>
         <?php endif ?>
     </li>
 </ul>
@@ -240,7 +240,7 @@ $(document).ready(function() {
 	$("#commissionPj").click(function(){
 		$.ajax({
 			type: "POST",
-			url: "/piece-jointe?type=dateCommission&id="+$("#dateCommId").val(),
+			url: "/piece-jointe?type=dateCommission&id="+$("#dateCommId").val()+"&displayDownloadButton=false",
 			success: function(msg){
 				dialogDateCommission.html(msg);
 				dialogDateCommission.dialog("open");
