--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -2,21 +2,22 @@
 <input type='hidden' name='idLinkPJ' id='idLinkPJ' value='<?php echo $this->identifiant ?>' />
 
 <h3>Liste de pièces jointes
-<?php
-	echo "
-		<button id='addPJ' class='btn' >Ajouter une piece jointe</button>
-		<button id='addPJQuick' class='btn' >Ajout rapide</button>
-	";
-?>
+    <button id='addPJ' class='btn' >Ajouter une piece jointe</button>
+    <button id='addPJQuick' class='btn' >Ajout rapide</button>
+
+    <?php if (
+        $this->displayDownloadButton
+        && null !== $this->listePj
+        && [] !== $this->listePj
+    ): ?>
+        <a href="/dossier/get-zip-all-pj/id/<?= $this->identifiant ?>" class="btn btn-success pull-right">Télécharger les pièces jointes</a>
+    <?php endif ?>
+
     <div id='dropzone' class='dropzone' style='display:none'></div>
 </h3>
 <div id='formAddPJ' title='Ajouter une pièce jointe' class='ui-helper-hidden' ></div>
 
-<?php if(!empty($this->listePj)) :?>
-    <a href="/dossier/get-zip-all-pj/id/<?= $this->identifiant ?>" class="btn btn-success">Télécharger les pièces jointes</a>
-<?php endif ?>
-
-<div id='listePieceJointe' class='<?php if(count($this->listePj)==0) echo "ui-helper-hidden"?>' >
+<div id='listePieceJointe' class='<?php if(count($this->listePj)===0) echo "ui-helper-hidden"?>' >
 	<table id='tabPieceJointe' class='table table-striped'>
 		<thead>
 			<tr>
