--- a/application/views/scripts/dossier/prescriptiontypeform.phtml
+++ b/application/views/scripts/dossier/prescriptiontypeform.phtml
@@ -1,22 +1,24 @@
 <?php
 
-echo "
-	<form name='formPrescription' id='formPrescription' action='' method='POST'>
-	<input type='hidden' name='ID_PRESCRIPTIONTYPE' id='ID_PRESCRIPTIONTYPE' value='".( ($this->do == 'edit')?$this->idPrescType:"")."' />
-	<input type='hidden' name='PRESCRIPTIONTYPE_CATEGORIE' id='PRESCRIPTIONTYPE_CATEGORIE' value='".( ($this->do == 'edit' && $this->assoc[0]['PRESCRIPTIONTYPE_CATEGORIE'] != 0)?$this->assoc[0]['PRESCRIPTIONTYPE_CATEGORIE']:"")."' />
-	<input type='hidden' name='PRESCRIPTIONTYPE_TEXTE' id='PRESCRIPTIONTYPE_TEXTE' value='".( ($this->do == 'edit' && $this->assoc[0]['PRESCRIPTIONTYPE_TEXTE'] != 0)?$this->assoc[0]['PRESCRIPTIONTYPE_TEXTE']:"")."' />
-	<input type='hidden' name='PRESCRIPTIONTYPE_ARTICLE' id='PRESCRIPTIONTYPE_ARTICLE' value='".( ($this->do == 'edit' && $this->assoc[0]['PRESCRIPTIONTYPE_ARTICLE'] != 0)?$this->assoc[0]['PRESCRIPTIONTYPE_ARTICLE']:"")."' />
-	<button id='emplacement' class='search btn' style='display:none;'>Rechercher les prescriptions  selon le classement</button>
-	<button id='word' class='search btn'>Rechercher les prescriptions par mots clés</button>
-	Cette prescription est
-	<select name='TYPE_PRESCRIPTION_DOSSIER' id='TYPE_PRESCRIPTION_DOSSIER'>
-		<option value='0'>Rappels réglementaires</option>
-		<option value='1'>Liée à l'exploitation</option>
-		<option value='2'>Liée à l'amélioration</option>
-	</select>
-	<br/><br/>
-";
-echo '
+$thirdPartyPlugins = explode(';', getenv('PREVARISC_THIRDPARTY_PLUGINS'));
+$isLabelChanged = in_array('Plugin_LibelleDossierPrescriptions', $thirdPartyPlugins, true); ?>
+
+<form name='formPrescription' id='formPrescription' action='' method='POST'>
+<input type='hidden' name='ID_PRESCRIPTIONTYPE' id='ID_PRESCRIPTIONTYPE' value='<?= ($this->do == 'edit')?$this->idPrescType:"" ?>' />
+<input type='hidden' name='PRESCRIPTIONTYPE_CATEGORIE' id='PRESCRIPTIONTYPE_CATEGORIE' value='<?= ($this->do == 'edit' && $this->assoc[0]['PRESCRIPTIONTYPE_CATEGORIE'] != 0)?$this->assoc[0]['PRESCRIPTIONTYPE_CATEGORIE']:"" ?>' />
+<input type='hidden' name='PRESCRIPTIONTYPE_TEXTE' id='PRESCRIPTIONTYPE_TEXTE' value='<?= ($this->do == 'edit' && $this->assoc[0]['PRESCRIPTIONTYPE_TEXTE'] != 0)?$this->assoc[0]['PRESCRIPTIONTYPE_TEXTE']:"" ?>' />
+<input type='hidden' name='PRESCRIPTIONTYPE_ARTICLE' id='PRESCRIPTIONTYPE_ARTICLE' value='<?= ($this->do == 'edit' && $this->assoc[0]['PRESCRIPTIONTYPE_ARTICLE'] != 0)?$this->assoc[0]['PRESCRIPTIONTYPE_ARTICLE']:"" ?>' />
+<button id='emplacement' class='search btn' style='display:none;'>Rechercher les prescriptions  selon le classement</button>
+<button id='word' class='search btn'>Rechercher les prescriptions par mots clés</button>
+Cette prescription est
+<select name='TYPE_PRESCRIPTION_DOSSIER' id='TYPE_PRESCRIPTION_DOSSIER'>
+    <option value='0'><?php if ($isLabelChanged): ?>Essais réalisés<?php else: ?>Rappels réglementaires<?php endif ?></option>
+    <option value='1'><?php if ($isLabelChanged): ?>Prescriptions<?php else: ?>Liée à l'exploitation<?php endif ?></option>
+    <option value='2'><?php if ($isLabelChanged): ?>Conclusions types<?php else: ?>Liée à l'amélioration<?php endif ?></option>
+</select>
+<br/><br/>
+
+<?php echo '
 	<div id="selectWord" style="display:none;">
 		Saisissez le ou les mots clés (séparés d\'un espace) <input type="texte" name="motscles" id="motscles" value="" style="width:500px;" />
 		<button class="search btn" id="wordSearch">Rechercher</button>
@@ -35,12 +37,12 @@ for($i=0; $i < $nbPrescType; $i++)
         if ($nbAssoc == 0) {
             continue;
         }
-        
+
 	echo "
 		<li id='prescriptiontype_".$this->prescriptionType[$i][0]['ID_PRESCRIPTIONTYPE']."' style='list-style-type:none;'>
 			<table style='width:900px;'>
 	";
-	
+
 	$cpt = true;
 	for($j=0; $j < $nbAssoc; $j++)
 	{
@@ -72,14 +74,14 @@ echo "</div>";
 <script type="text/javascript">
 
 $(document).ready(function(){
-	
+
         $('#motscles').keypress(function(e){
             if(e.keyCode==13) {
                 e.preventDefault();
                 $('#wordSearch').click();
             }
         });
-        
+
 	$("#wordSearch").live('click',function(){
 		$.ajax({
 			type: "POST",
@@ -91,7 +93,7 @@ $(document).ready(function(){
 		});
 		return false;
 	});
-	
+
 	$(".search").live('click',function(){
 		var type= $(this).attr('id');
 		if(type == 'emplacement'){
