nom des routes incorrect

--- a/application/layouts/menu_admin.phtml
+++ b/application/layouts/menu_admin.phtml
@@ -28,7 +28,7 @@
         <a href='/couches-cartographiques/list' ><em class="icon-cog icon-black"></em> Gestion des couches cartographiques</a>
     </li>
 
-    <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'gestion-des-commission') echo "class='active'" ?> >
+    <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'gestion-des-commissions') echo "class='active'" ?> >
         <a href='/gestion-des-commissions' ><em class="icon-th-list icon-black"></em> Gestion des commissions</a>
     </li>
 
@@ -46,7 +46,7 @@
 
     <li class="nav-header">Paramétrage du logiciel</li>
 
-    <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'periodicite') echo "class='active'" ?> >
+    <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'tableau-des-periodicites') echo "class='active'" ?> >
         <a href='/tableau-des-periodicites' ><em class="icon-th-list icon-black"></em> Tableau des périodicités</a>
     </li>
 
